[gd_scene load_steps=13 format=2]

[ext_resource path="res://Lobby/NetworkLobby/NetworkLobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/finalNight.PNG" type="Texture" id=2]
[ext_resource path="res://Fonts/monogram_extended.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/ButtonFont.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0.717647, 0.215686, 0.215686, 0.74902 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
Label/fonts/font = null

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0.447059, 0.447059, 0.729412, 0.717647 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 3 )

[node name="NetworkLobby" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 320, 180 )
scale = Vector2( 1.48837, 1.07143 )
texture = ExtResource( 2 )

[node name="PlayerInfoPanel" type="Panel" parent="Panel"]
self_modulate = Color( 0.384314, 0.384314, 0.384314, 0.784314 )
margin_left = 16.0
margin_top = 16.0
margin_right = 384.0
margin_bottom = 304.0

[node name="PlayerList" type="Label" parent="Panel/PlayerInfoPanel"]
margin_left = 32.0
margin_top = 48.0
margin_right = 352.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 1 )
text = "1 Player names here
2
3
4
5
6
7
8"

[node name="PlayerLabel" type="Label" parent="Panel/PlayerInfoPanel"]
margin_right = 368.0
margin_bottom = 48.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Connected Players"
align = 1
valign = 1
uppercase = true

[node name="HostIpAddr" type="Label" parent="Panel/PlayerInfoPanel"]
margin_left = -12.0
margin_top = -16.0
margin_right = 180.0
custom_fonts/font = SubResource( 4 )
text = "Your IP address:"

[node name="ExitButton" type="Button" parent="Panel"]
margin_left = 16.0
margin_top = 320.0
margin_right = 96.0
margin_bottom = 352.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Exit"

[node name="StartButton" type="Button" parent="Panel"]
margin_left = 544.0
margin_top = 320.0
margin_right = 624.0
margin_bottom = 352.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_hover = Color( 0.270588, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 1, 0, 1 )
text = "Start"

[node name="MapPanel" type="Panel" parent="Panel"]
self_modulate = Color( 0.384314, 0.384314, 0.384314, 0.784314 )
margin_left = 400.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 304.0

[node name="DungeonButton" type="Button" parent="Panel/MapPanel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 0, 0.913725, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.913725, 1, 1 )
text = "Dungeon"

[node name="GrassyPlainsButton" type="Button" parent="Panel/MapPanel"]
margin_left = 16.0
margin_top = 96.0
margin_right = 208.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_hover = Color( 0, 0.913725, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.913725, 1, 1 )
text = "Grassy Plains"

[node name="MapLabel" type="Label" parent="Panel/MapPanel"]
margin_left = 16.0
margin_top = 192.0
margin_right = 208.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 5 )
text = "SELECTED MAP:"

[node name="ChosenMapLabel" type="Label" parent="Panel/MapPanel"]
margin_left = 32.0
margin_top = 224.0
margin_right = 192.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 7 )
text = "Dungeon"
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Panel/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Panel/MapPanel/DungeonButton" to="." method="_on_DungeonButton_pressed"]
[connection signal="pressed" from="Panel/MapPanel/GrassyPlainsButton" to="." method="_on_GrassyPlainsButton_pressed"]
